[package]
name = "stash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
directories = "4.0.1"
eyre = "0.6.8"
fs-err = "2.7.0"
tempdir = "0.3.7"
time = { version = "0.3.9", features = ["formatting"] }
