[package]
name = "stash"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.9"
clap = { version = "3.2.5", features = ["derive"] }
directories = "4.0.1"
eyre = "0.6.8"
fs-err = "2.7.0"
lazy-regex = "2.3.0"
tempdir = "0.3.7"
time = { version = "0.3.9", features = ["formatting"] }
